--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
                             <span>ChatGPT</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn small"><i class="fas fa-external-link-alt"></i> Download</a>
-                            <a href="#" class="btn small secondary"><i class="fab fa-github"></i> Code</a>
+                            <!-- <a href="#" class="btn small"><i class="fas fa-external-link-alt"></i> Download</a> -->
+                            <a href="https://github.com/murugansr/Tortuga.git" class="btn small secondary"><i
+                                    class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
@@ -133,8 +134,9 @@
                             <span>ChatGPT</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="btn small"><i class="fas fa-external-link-alt"></i> Demo</a>
-                            <a href="#" class="btn small secondary"><i class="fab fa-github"></i> Code</a>
+                            <!-- <a href="#" class="btn small"><i class="fas fa-external-link-alt"></i> Demo</a> -->
+                            <a href="https://github.com/murugansr/Tortuga.git" class="btn small secondary"><i
+                                    class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
