--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
                 <div class="project-card" data-category="software">
                     <div class="project-image">
-                        <img src="C:\Users\MURUGAN\Desktop\PortfolioDS\assets\client.jpg" alt="User Restaurant App">
+                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/client.jpg?token=GHSAT0AAAAAADDPSS6W7I5MKBTYMSB3MS362BIYZ3A"
+                            alt="User Restaurant App">
                         <div class="project-category">Software</div>
                     </div>
                     <div class="project-details">
