--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="project-grid">
                 <div class="project-card" data-category="uiux">
                     <div class="project-image">
-                        <img src="C:\Users\MURUGAN\Desktop\PortfolioDS\assets\Screenshot 2025-05-11 192723.png"
+                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/Screenshot%202025-05-11%20192723.png?token=GHSAT0AAAAAADDPSS6XWF6IP7D7PMMNB72E2BIY6QA"
                             alt="RestaurantApp Design">
                         <div class="project-category">UI/UX Design</div>
                     </div>
@@ -102,7 +102,7 @@
 
                 <div class="project-card" data-category="uiux">
                     <div class="project-image">
-                        <img src="C:\Users\MURUGAN\Desktop\PortfolioDS\assets\Screenshot 2025-05-11 185731.png"
+                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/Screenshot%202025-05-11%20185731.png?token=GHSAT0AAAAAADDPSS6WN764BV5WLS3RYNGY2BIY6VA"
                             alt="Mobile Chat App Design">
                         <div class="project-category">UI/UX Design</div>
                     </div>
@@ -123,7 +123,8 @@
 
                 <div class="project-card" data-category="software">
                     <div class="project-image">
-                        <img src="C:\Users\MURUGAN\Desktop\PortfolioDS\assets\admin.jpg" alt="Admin Restaurant App">
+                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/admin.jpg?token=GHSAT0AAAAAADDPSS6XMLR65ST7OKIBC3UW2BIY5DA"
+                            alt="Admin Restaurant App">
                         <div class="project-category">Software</div>
                     </div>
                     <div class="project-details">
