--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <div class="project-card" data-category="software">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/admin.jpg?token=GHSAT0AAAAAADDPSS6XMLR65ST7OKIBC3UW2BIY5DA"
+                        <img src="https://drive.google.com/file/d/1JgplgZg6Czf3QdTovMfHRGi_ajZJfqNx/view?usp=drive_link"
                             alt="Admin Restaurant App">
                         <div class="project-category">Software</div>
                     </div>
