--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             <div class="project-grid">
                 <div class="project-card" data-category="uiux">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/Screenshot%202025-05-11%20192723.png?token=GHSAT0AAAAAADDPSS6XWF6IP7D7PMMNB72E2BIY6QA"
-                            alt="RestaurantApp Design">
+                        <img src="assets/TortugaUI.png" alt="RestaurantApp Design">
                         <div class="project-category">UI/UX Design</div>
                     </div>
                     <div class="project-details">
@@ -80,8 +79,7 @@
 
                 <div class="project-card" data-category="software">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/client.jpg?token=GHSAT0AAAAAADDPSS6W7I5MKBTYMSB3MS362BIYZ3A"
-                            alt="User Restaurant App">
+                        <img src="assets/client.jpg" alt="User Restaurant App">
                         <div class="project-category">Software</div>
                     </div>
                     <div class="project-details">
@@ -102,8 +100,7 @@
 
                 <div class="project-card" data-category="uiux">
                     <div class="project-image">
-                        <img src="https://raw.githubusercontent.com/murugansr/Assets/refs/heads/main/Screenshot%202025-05-11%20185731.png?token=GHSAT0AAAAAADDPSS6WN764BV5WLS3RYNGY2BIY6VA"
-                            alt="Mobile Chat App Design">
+                        <img src="assets/ChitChat.png" alt="Mobile Chat App Design">
                         <div class="project-category">UI/UX Design</div>
                     </div>
 
@@ -123,8 +120,7 @@
 
                 <div class="project-card" data-category="software">
                     <div class="project-image">
-                        <img src="https://drive.google.com/file/d/1JgplgZg6Czf3QdTovMfHRGi_ajZJfqNx/view?usp=drive_link"
-                            alt="Admin Restaurant App">
+                        <img src="assets/admin.jpg" alt="Admin Restaurant App">
                         <div class="project-category">Software</div>
                     </div>
                     <div class="project-details">
