img final also resume pdf

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
             </div>
 
             <div class="download-resume">
-                <a href="#" class="btn primary" download>
-                    <i class="fas fa-download"></i> Download Resume
+                <a href="assets/Resume.pdf" class="btn primary" download>
+                    <!-- <i class="fas fa-download"></i> Download Resume -->
                 </a>
             </div>
         </div>
