--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
             <div class="download-resume">
                 <a href="assets/Resume.pdf" class="btn primary" download>
-                    <!-- <i class="fas fa-download"></i> Download Resume -->
+                    <i class="fa-solid fa-eye"></i> View Resume
                 </a>
             </div>
         </div>
