New Resume UPdated CGPA

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             </div>
 
             <div class="download-resume">
-                <a href="assets/UpdRes.pdf" class="btn primary" download>
+                <a href="assets/ResumeUp.pdf" class="btn primary" download>
                     <i class="fa-solid fa-eye"></i> View Resume
                 </a>
             </div>
